overflow problem fixed

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -31,6 +31,7 @@
    color: $white;
    font-family: $font-family;
    @include flex-center(column);
+   max-width: 100vw;
    overflow-x: hidden;
  }
 
